package domain;

public enum TipoMaterial {
    METAL,
    ACERO,
    GRAFENO,
    VIBRANIUM
}
